re PR c++/57279 ([C++11] alias declaration fails to declare function types with cv-qualifiers)

PR c++/57279
	* decl.c (grokdeclarator): Allow member function qualifiers in
	TYPENAME context.

From-SVN: r198976